deleteOne, deleteMany, returnDocumentResponses